# MacVM-MCP

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  config.json.example  install.sh  mac_connection.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
prompts/: analyze_app_bundle.md  mac_incident_response.md  mac_persistence_check.md  pkg_installer_audit.md  triage_macos_sample.md
resources/: cheatsheet.md  frida-snippets.md  persistence-locations.md  tcc-database.md
skills/: audit-app-bundle.md  macos-incident-response.md  triage-macos-malware.md
