[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macvm-mcp"
version = "1.0.0"
description = "MCP server for automated macOS malware analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "zixuantemp"}]
keywords = ["mcp", "malware-analysis", "macos", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "bandit"]

[project.scripts]
macvm-mcp = "server:main_sync"

[project.urls]
Homepage = "https://github.com/zixuantemp/MacVM-MCP"
Repository = "https://github.com/zixuantemp/MacVM-MCP"

[tool.setuptools]
py-modules = ["server", "mac_connection"]

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B"]
# E501 ignored because the server has many embedded shell heredocs that
# cannot be wrapped without breaking the script.
ignore = ["E501"]

